Attempt title fix
You know everything's going to go great when the very first changes you make fail, lmao.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hacknet Extensions
+title: "Hacknet Extensions"
 email: hacknet@mail.lv
 url: https://testingunderground.github.io/extensions
 description: "An alternative Hacknet extensions hosting place."
