--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Hacknet Extensions"
+title: Freelancer
 email: hacknet@mail.lv
 url: https://testingunderground.github.io/extensions
 description: "An alternative Hacknet extensions hosting place."
