--- a/_config.yml
+++ b/_config.yml
@@ -39,14 +39,14 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-#  - title: twitter
-    url: http://twitter.com/jekyllrb
-#  - title: facebook
+  - title: twitter
+    url: https://nitter.net
+  - title: facebook
     url:
- # - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
- # - title: bitbucket
-    url: http://bitbucket.org/jekyll
+  - title: stack-overflow
+    url: https://stackoverflow.com/
+  - title: bitbucket
+    url: https://bitbucket.org/
   - title: github
     url: https://github.com/HacknetExt
 
