--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
 # Postal address (add as many lines as necessary)
 address:
   - line: PortHack.Heart
-  - line: En_Romulus
+#  - line: En_Romulus
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="https://startbootstrap.com">Start Bootstrap</a>. and configured for Jekyll by <a href="https://github.com/jeromelachaud">jeromelachaud</a>.'
